--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "application-tracking",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pauldesiles.github.io/job-state-tracker",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.0.0",
     "typescript": "^3.9.5"
   }
 }
