--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-select": "^3.0.13",
     "@types/react-transition-group": "^4.4.0",
+    "@types/uuid": "^8.0.0",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "uuid": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
